# mersel-dss-agent-desktop-app

./: .gitignore  CHANGELOG.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  release.sh
.github/workflows/: manifest.yml  release.yml
scripts/: build-jre.mjs  build-manifest.mjs  fetch-jre.mjs  fetch-services.mjs  fetch-winsw.mjs  sign-bundled-natives.sh
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/jre/: .gitkeep
src-tauri/resources/jre21/: .gitkeep
src-tauri/resources/services/: .gitkeep
src-tauri/resources/win-service/: .gitkeep  register.ps1  unregister.ps1
src-tauri/src/: config.rs  envelope.rs  error.rs  java.rs  lib.rs  main.rs  models.rs  net.rs  state.rs
src-tauri/src/commands/: diagnostics.rs  export.rs  mod.rs  preview.rs  services.rs  settings.rs  signing.rs  system.rs  timestamp.rs  validation.rs  verification.rs  virtualcards.rs
src-tauri/src/download/: github.rs  mod.rs  version.rs
src-tauri/src/http/: agent.rs  diagnostics.rs  htmltopdf.rs  mod.rs  verifier.rs  xslt.rs
src-tauri/src/os_service/: mod.rs
src-tauri/src/process/: jar.rs  manager.rs  mod.rs
src/app/: App.tsx  container.ts  providers.tsx  router.tsx
src/application/changelog/: hooks.ts
src/application/diagnostics/: hooks.ts
src/application/platform/: hooks.ts
src/application/preview/: hooks.ts
src/application/services/: hooks.ts  useBootPreparation.ts  useDownloadProgress.ts  useServiceUpdates.ts
src/application/settings/: hooks.ts
src/application/signing/: hooks.ts  parsers.ts
src/application/timestamp/: hooks.ts
src/application/update/: hooks.ts
src/application/validation/: hooks.ts
src/application/verification/: hooks.ts
src/application/virtualcards/: hooks.ts  parsers.ts
src/domain/changelog/: ports.ts  types.ts
src/domain/diagnostics/: ports.ts  types.ts
src/domain/platform/: ports.ts
src/domain/preview/: ports.ts  types.ts
src/domain/services/: ports.ts  types.ts
src/domain/settings/: ports.ts  types.ts
src/domain/signing/: ports.ts  types.ts
src/domain/timestamp/: ports.ts  types.ts
src/domain/update/: ports.ts
src/domain/validation/: ports.ts  types.ts
src/domain/verification/: ports.ts  types.ts
src/domain/virtualcards/: ports.ts  types.ts
src/infrastructure/events/: downloadProgress.ts
src/infrastructure/tauri/: changelogGateway.ts  client.ts  diagnosticsGateway.ts  fileGateway.ts  previewGateway.ts  serviceGateway.ts  settingsGateway.ts  signingGateway.ts  timestampGateway.ts  updaterGateway.ts  validationGateway.ts  verificationGateway.ts  virtualCardsGateway.ts
src/presentation/layout/: AppShell.tsx  BootSplash.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  TopBar.tsx  UpdateBanner.tsx  WindowControls.tsx
src/presentation/pages/: ChangelogPage.tsx  DashboardPage.tsx  DiagnosticsPage.tsx  (+5 more)
src/shared/: brand.ts
(+79 files in other folders)
