[package]
name = "mersel-dss-agent-desktop"
version = "0.1.11"
description = "Mersel İmzamatik - Mersel tarafından geliştirilen yerel e-imza ve doğrulama masaüstü uygulaması"
authors = ["Mersel"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mersel_dss_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "time", "fs", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
futures-util = "0.3"
quick-xml = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# macOS: WKWebView.createPDF ile uygulama içi (tek tıkla) PDF dışa aktarımı için
# native köprü. Diğer platformlarda gerekmez.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
block2 = "0.6"
